--- a/README.html
+++ b/README.html
@@ -123,6 +123,12 @@ $(document).ready(function () {
 
 </div>
 
+<div id="TOC">
+<ul>
+<li><a href="#description-of-the-course">Description of the course</a></li>
+<li><a href="#my-github-repository-course-diary">My github repository — course diary</a></li>
+</ul>
+</div>
 
 <div id="description-of-the-course" class="section level3">
 <h3>Description of the course</h3>
