--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@ $(document).ready(function () {
 <hr />
 <div id="about-the-project" class="section level1">
 <h1>About the project</h1>
+<p>This is the start of my course diary. Updates coming soon.</p>
 <div id="description-of-the-course" class="section level3">
 <h3>Description of the course</h3>
 <p>In this course I will learn about:</p>
