--- a/README.html
+++ b/README.html
@@ -132,10 +132,11 @@ $(document).ready(function () {
 <li>Data analysis</li>
 </ul>
 </div>
-<div id="my-github-repository-course-diary" class="section level3">
-<h3>My github repository — course diary</h3>
+<div id="my-github-repository-and-course-diary" class="section level3">
+<h3>My github repository and course diary</h3>
 <p>Check out this link for a frequently updated course diary</p>
 <p><a href="https://github.com/maasal/IODS-project" class="uri">https://github.com/maasal/IODS-project</a></p>
+<p><a href="https://maasal.github.io/IODS-project/" class="uri">https://maasal.github.io/IODS-project/</a></p>
 </div>
 
 
